--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -1,5 +1,6 @@
 language = en
 label.registration = Registration
+label.administrator = Administrator
 label.login = Login
 label.logout = Logout
 label.password = Password
@@ -12,6 +13,8 @@ label.profile = Profile
 label.login_error = Your login attempt was not successful, try again
 label.caused = Caused
 label.home = Home
+label.lock = Lock
+label.unlock = Unlock
 label.delete = Delete
 label.ch_avatar = Change avatar
 label.submit = Submit
@@ -37,6 +40,8 @@ label.users = Users
 label.task = Task
 label.mytasks = My tasks
 label.edit = Edit
+label.subscribers = Subscribers
+label.alltasks = All Tasks
 
 validation.duplicate_name = A user already exists with that name
 validation.different_pass = Retype passwords to match
