--- a/src/main/resources/label_ru.properties
+++ b/src/main/resources/label_ru.properties
@@ -1,43 +1,48 @@
-language = ру
-label.registration = Регистрация
-label.login = Войти
-label.logout = Выйти
-label.password = Пароль
-label.confirm_password = Подтвердите пароль
-label.add_user = Создать
-label.username = Имя
+language = \u0440\u0443
+label.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+label.administrator = \u0410\u0434\u043C\u0438\u043D\u0438\u0441\u0442\u0440\u0430\u0442\u043E\u0440
+label.login = \u0412\u043E\u0439\u0442\u0438
+label.logout = \u0412\u044B\u0439\u0442\u0438
+label.password = \u041F\u0430\u0440\u043E\u043B\u044C
+label.confirm_password = \u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+label.add_user = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
+label.username = \u0418\u043C\u044F
 label.email = Email
-label.save = Сохранить
-label.profile = Профиль
-label.login_error = Войти не удалось, попробуйте еще раз
-label.caused = Причина
-label.home = Главная
-label.delete = Удалить
-label.ch_avatar = Сменить аватар
-label.submit = Сохранить
-label.yes = Да
-label.no = Нет
-label.author = Автор
-label.search = Поиск
-label.tasks = Задачи
-label.subproblems = Подзадачи
-label.add = Добавить
-label.tags = Теги
-label.comment = Комментарий
-label.create = Создать
-label.title = Заголовок
-label.description = Описание
-label.logo = Логотип
-label.add_subproblem = Добавить подзадачу
-label.content = Содержание
-label.found = Найдено
-label.empty = Пусто
-label.remember = Запомнить
-label.users = Пользователи
-label.task = Задача
-label.mytasks = Мои задачи
-label.edit = Редактировать
+label.save = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+label.profile = \u041F\u0440\u043E\u0444\u0438\u043B\u044C
+label.login_error = \u0412\u043E\u0439\u0442\u0438 \u043D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C, \u043F\u043E\u043F\u0440\u043E\u0431\u0443\u0439\u0442\u0435 \u0435\u0449\u0435 \u0440\u0430\u0437
+label.caused = \u041F\u0440\u0438\u0447\u0438\u043D\u0430
+label.home = \u0413\u043B\u0430\u0432\u043D\u0430\u044F
+label.lock = \u0417\u0430\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+label.unlock = \u0420\u0430\u0437\u0431\u043B\u043E\u043A\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+label.delete = \u0423\u0434\u0430\u043B\u0438\u0442\u044C
+label.ch_avatar = \u0421\u043C\u0435\u043D\u0438\u0442\u044C \u0430\u0432\u0430\u0442\u0430\u0440
+label.submit = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+label.yes = \u0414\u0430
+label.no = \u041D\u0435\u0442
+label.author = \u0410\u0432\u0442\u043E\u0440
+label.search = \u041F\u043E\u0438\u0441\u043A
+label.tasks = \u0417\u0430\u0434\u0430\u0447\u0438
+label.subproblems = \u041F\u043E\u0434\u0437\u0430\u0434\u0430\u0447\u0438
+label.add = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+label.tags = \u0422\u0435\u0433\u0438
+label.comment = \u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+label.create = \u0421\u043E\u0437\u0434\u0430\u0442\u044C
+label.title = \u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+label.description = \u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
+label.logo = \u041B\u043E\u0433\u043E\u0442\u0438\u043F
+label.add_subproblem = \u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u043F\u043E\u0434\u0437\u0430\u0434\u0430\u0447\u0443
+label.content = \u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
+label.found = \u041D\u0430\u0439\u0434\u0435\u043D\u043E
+label.empty = \u041F\u0443\u0441\u0442\u043E
+label.remember = \u0417\u0430\u043F\u043E\u043C\u043D\u0438\u0442\u044C
+label.users = \u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u0438
+label.task = \u0417\u0430\u0434\u0430\u0447\u0430
+label.mytasks = \u041C\u043E\u0438 \u0437\u0430\u0434\u0430\u0447\u0438
+label.edit = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
+label.subscribers = \u041F\u043E\u0434\u043F\u0438\u0441\u0447\u0438\u043A\u0438
+label.alltasks = \u0412\u0441\u0435 \u0417\u0430\u0434\u0430\u0447\u0438
 
-validation.duplicate_name = Такое имя уже занято
-validation.different_pass = Ваши пароли не совпадают
+validation.duplicate_name = \u0422\u0430\u043A\u043E\u0435 \u0438\u043C\u044F \u0443\u0436\u0435 \u0437\u0430\u043D\u044F\u0442\u043E
+validation.different_pass = \u0412\u0430\u0448\u0438 \u043F\u0430\u0440\u043E\u043B\u0438 \u043D\u0435 \u0441\u043E\u0432\u043F\u0430\u0434\u0430\u044E\u0442
 
