--- a/src/main/resources/label_en.properties
+++ b/src/main/resources/label_en.properties
@@ -42,6 +42,11 @@ label.mytasks = My tasks
 label.edit = Edit
 label.subscribers = Subscribers
 label.alltasks = All Tasks
+label.error = Error
+title.main = Main
+title.create_task = Create Task
+title.create_subproblem = Create Subproblem
+
 
 validation.duplicate_name = A user already exists with that name
 validation.different_pass = Retype passwords to match
